--- a/deno.json
+++ b/deno.json
@@ -35,9 +35,11 @@
   ],
   "tasks": {
     "test": "deno fmt --check lib && deno test --doc lib",
+    "test:npm": "node scripts/test_npm.js",
     "lint": "deno lint lib",
     "lint:fix": "deno fmt lib && deno lint --fix lib",
     "build": "deno run -A jsr:@deno/wasmbuild --out ./rs_lib/pkg --inline",
+    "build:npm": "deno run -A ./scripts/build_npm.ts",
     "docs": "deno run -A ./scripts/build_docs.ts",
     "benchmark": "deno run --allow-write ./scripts/benchmark.ts",
     "deploy": "deno task build && deno task test && deno task lint:fix && deno publish --allow-dirty"
