--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,3 +62,5 @@ jobs:
         run: |
           cd npm
           npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
