👷 Remove npm publish options for provenance and access

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,4 +64,4 @@ jobs:
       - name: Publish to npm
         run: |
           cd npm
-          npm publish --provenance --access public
+          npm publish
